tests/codegen/fail/union/trait_fail_infer_context.stderr
error[E0277]: the trait bound `CustomContext: FromContext<SubContext>` is not satisfied
 --> fail/union/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ the trait `FromContext<SubContext>` is not implemented for `CustomContext`
  |
  = help: the following other types implement trait `FromContext<T>`:
            <SubContext as FromContext<CustomContext>>
            <() as FromContext<T>>
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> fail/union/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^
  | |
  | expected `&CustomContext`, found `&SubContext`
  | arguments to this function are incorrect
  |
  = note: expected reference `&CustomContext`
             found reference `&SubContext`
note: method defined here
 --> $WORKSPACE/juniper/src/executor/mod.rs
  |
  |     fn into_resolvable(self, ctx: &'a C) -> FieldResult<Option<(&'a T::Context, T)>, S>;
  |        ^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
